--- a/style.css
+++ b/style.css
@@ -150,11 +150,162 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 27px;
+  margin-top: 48px;
   font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--title-color);
+
+  transition: all 350ms ease;
+}
+.design .design-list .design-item .design-more:hover {
+  color: var(--main-color);
 }
 .design .design-list .design-item .design-more .icon-arrow {
   margin-left: 6px;
+}
+
+.challenging {
+  padding-top: 40px;
+  padding-bottom: 36px;
+}
+.challenging .container {
+  display: flex;
+  justify-content: space-between;
+}
+.challenging .challenging-title {
+  width: 450px;
+  margin-bottom: 42px;
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 1.3;
+  letter-spacing: 0em;
+  color: var(--title-color);
+}
+.challenging .challenging-info {
+  width: 530px;
+  font-size: 22px;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: var(--info-color);
+}
+.challenging .contact {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+}
+.challenging .contact .challenging-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 98px;
+  height: 98px;
+  border-radius: 50%;
+  border: none;
+  background: #f4f0ec;
+}
+.challenging .contact .contact-wrapper {
+  margin-left: 20px;
+}
+.challenging .contact .contact-wrapper .call-us,
+.tel {
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: #4d5053;
+}
+.challenging .contact .contact-wrapper .tell {
+  font-size: 22px;
+}
+.challenging .challenging-container .challenging-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 263px;
+  height: 71px;
+  margin-top: 60px;
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: var(--title-color);
+  border-radius: 18px;
+  border: 2px solid var(--title-color);
+  transition: all 350ms ease;
+}
+.challenging .challenging-container .challenging-btn:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.challenging .challenging-container .challenging-btn .btn-icon {
+  margin-left: 16px;
+}
+
+.comment {
+  padding-top: 140px;
+  padding-bottom: 140px;
+}
+.comment .contaner {
+  width: 1200px;
+  padding: 100px 50px 120px;
+  padding-top: 100px;
+  padding-bottom: 120px;
+  margin: auto;
+  background-color: #f4f0ec;
+  border-radius: 70px;
+}
+.comment .comment-title {
+  width: 479px;
+  margin: auto;
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 45px;
+  line-height: 1.3;
+  letter-spacing: 0em;
+  text-align: center;
+  color: var(--title-color);
+}
+.comment .comment-list {
+  display: flex;
+  column-gap: 17px;
+  margin-top: 46px;
+}
+.comment .comment-list .comment-item {
+  width: 354px;
+  padding: 35px 75px 45px 35px;
+  background-color: #fff;
+  border-radius: 30px;
+}
+.comment .comment-list .comment-item .item-container {
+  display: flex;
+  align-items: center;
+}
+.comment .comment-list .comment-item .item-container div {
+  margin-left: 20px;
+}
+.comment .comment-list .comment-item div .list-title {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: var(--title-color);
+}
+.comment .comment-list .comment-item div .person-location,
+.list-text {
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: var(--info-color);
+}
+.comment .comment-list .comment-item .list-text {
+  font-size: 20px;
+  margin-top: 25px;
+}
+.comment .comment-list .comment-item .list-text:last-child {
+  width: 274px;
 }
