--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ body {
   width: 1230px;
   margin: 0 auto;
   padding: 0 15px;
+  @media screen and (min-width: 320px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 480px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 768px) {
+    width: 100%;
+  }
 }
 html {
   box-sizing: border-box;
@@ -74,6 +83,10 @@ header {
   padding-bottom: 260px;
   background: url("./images/hero.png") no-repeat center;
   background-size: cover;
+  @media screen and (min-width: 320px) {
+    padding-top: 150px;
+    padding-bottom: 200px;
+  }
 }
 .hero .hero-title {
   width: 595px;
@@ -84,6 +97,10 @@ header {
   line-height: 1.2;
   letter-spacing: 0em;
   color: var(--title-color);
+  @media screen and (min-width: 320px) {
+    width: auto;
+    font-size: 39px;
+  }
 }
 .hero .hero-info {
   width: 577px;
@@ -92,6 +109,9 @@ header {
   line-height: 1.5;
   letter-spacing: 0.01em;
   color: var(--info-color);
+  @media screen and (min-width: 320px) {
+    width: auto;
+  }
 }
 .hero .hero-btn {
   display: flex;
@@ -121,13 +141,24 @@ header {
 .design {
   padding-top: 100px;
   padding-bottom: 100px;
+
+  @media screen and (min-width: 320px) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 .design .design-list {
   display: flex;
   justify-content: space-between;
+  @media screen and (min-width: 320px) {
+    display: block;
+  }
 }
 .design .design-list .design-item {
   flex-basis: calc((100% - 2 * 52px) / 3);
+  @media screen and (min-width: 320px) {
+    margin-top: 20px;
+  }
 }
 .design .design-list .design-item .disign-title {
   font-family: var(--second-family);
@@ -145,6 +176,9 @@ header {
   letter-spacing: 0.01em;
   text-align: center;
   color: var(--info-color);
+  @media screen and (min-width: 320px) {
+    margin-top: 10px;
+  }
 }
 .design .design-list .design-item .design-more {
   display: flex;
@@ -158,6 +192,10 @@ header {
   color: var(--title-color);
 
   transition: all 350ms ease;
+
+  @media screen and (min-width: 320px) {
+    margin-top: 20px;
+  }
 }
 .design .design-list .design-item .design-more:hover {
   color: var(--main-color);
@@ -173,6 +211,10 @@ header {
 .challenging .container {
   display: flex;
   justify-content: space-between;
+
+  @media screen and (min-width: 320px) {
+    display: block;
+  }
 }
 .challenging .challenging-title {
   width: 450px;
@@ -183,6 +225,10 @@ header {
   line-height: 1.3;
   letter-spacing: 0em;
   color: var(--title-color);
+
+  @media screen and (min-width: 320px) {
+    font-size: 33px;
+  }
 }
 .challenging .challenging-info {
   width: 530px;
@@ -190,10 +236,16 @@ header {
   line-height: 1.5;
   letter-spacing: 0.01em;
   color: var(--info-color);
+
+  @media screen and (min-width: 320px) {
+    width: auto;
+    text-align: center;
+  }
 }
 .challenging .contact {
   display: flex;
   align-items: center;
+  padding-bottom: 0;
   margin-top: 40px;
 }
 .challenging .contact .challenging-icon {
@@ -205,6 +257,11 @@ header {
   border-radius: 50%;
   border: none;
   background: #f4f0ec;
+
+  @media screen and (min-width: 320px) {
+    width: 70px;
+    height: 70px;
+  }
 }
 .challenging .contact .contact-wrapper {
   margin-left: 20px;
@@ -214,7 +271,11 @@ header {
   font-size: 24px;
   line-height: 1.5;
   letter-spacing: 0.01em;
-  color: #4d5053;
+  color: var(--info-color);
+
+  @media screen and (min-width: 320px) {
+    text-align: center;
+  }
 }
 .challenging .contact .contact-wrapper .tell {
   font-size: 22px;
@@ -234,6 +295,9 @@ header {
   border-radius: 18px;
   border: 2px solid var(--title-color);
   transition: all 350ms ease;
+  @media screen and (min-width: 320px) {
+    margin-top: 30px;
+  }
 }
 .challenging .challenging-container .challenging-btn:hover {
   cursor: pointer;
@@ -243,10 +307,22 @@ header {
 .challenging .challenging-container .challenging-btn .btn-icon {
   margin-left: 16px;
 }
+.challenging .challengeing-img {
+  display: block;
+  @media screen and (min-width: 320px) {
+    display: none;
+  }
+}
 
 .comment {
   padding-top: 140px;
   padding-bottom: 140px;
+  @media screen and (min-width: 320px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    outline: 1px grey solid !important;
+  }
 }
 .comment .contaner {
   width: 1200px;
