--- a/style.css
+++ b/style.css
@@ -60,13 +60,17 @@ a {
   text-decoration: none;
 }
 header {
+  outline: 1px grey solid !important;
   padding-top: 26px;
   padding-bottom: 18px;
 }
 .header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 .header-container .nav-list {
   display: flex;
@@ -81,7 +85,63 @@ header {
 .header-container .nav-list .nav-link:hover {
   color: var(--main-color);
 }
-
+.container-mobile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  @media screen and (min-width: 1200px) {
+    display: none;
+  }
+}
+.menu-container .mb-container {
+  margin-top: 20px;
+  margin-bottom: 160px;
+}
+.container-mobile .menu-open,
+.close-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+}
+.container-mobile .menu-open .open-icon,
+.icon-close {
+  width: 40px;
+  height: 40px;
+}
+.menu-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  overflow: hidden;
+  padding: 0 15px;
+  margin: 0 auto;
+  transform: translateX(100%);
+  background-color: #e7e7e7;
+  transition: all 250ms ease-in-out;
+}
+.menu-container.is-open {
+  transform: translateX(0);
+}
+.menu-container .nav .nav-list {
+  width: fit-content;
+  margin: auto;
+}
+.menu-container .nav .nav-list .nav-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+.menu-container .nav .nav-list .nav-item .nav-link {
+  font-size: 35px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+  transition: all 350ms ease;
+}
 .hero {
   padding-top: 150px;
   padding-bottom: 200px;
@@ -713,8 +773,6 @@ header {
 }
 
 footer .container {
-  outline: 1px red solid !important;
-
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
