--- a/style.css
+++ b/style.css
@@ -35,7 +35,9 @@ html {
 *::after {
   box-sizing: inherit;
 }
-
+* {
+  outline: 1px rgb(61, 61, 196) solid !important;
+}
 h1,
 h2,
 h3,
@@ -60,7 +62,7 @@ a {
   text-decoration: none;
 }
 header {
-  outline: 1px grey solid !important;
+  /* outline: 1px grey solid !important; */
   padding-top: 26px;
   padding-bottom: 18px;
 }
@@ -778,13 +780,16 @@ footer .container {
   flex-wrap: wrap;
 }
 footer .container .footer-descrption {
-  width: 326px;
+  width: auto;
   margin-bottom: 31px;
   margin-top: 15px;
   font-size: 22px;
   line-height: 1.5;
   letter-spacing: 0.01em;
   color: var(--info-color);
+  @media screen and (min-width: 1200px) {
+    width: 326px;
+  }
 }
 footer .container .social-media {
   display: flex;
